--- a/src/DealOrNoDeal.cbp
+++ b/src/DealOrNoDeal.cbp
@@ -7,16 +7,18 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/DealNoDel" prefix_auto="1" extension_auto="1" />
+				<Option output="../debug" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-ffast-math" />
+					<Add directory="miniaudio" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/DealNoDel" prefix_auto="1" extension_auto="1" />
+				<Option output="../Deal or no Deal" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -28,7 +30,6 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add directory="miniaudio" />
 				</Linker>
 			</Target>
 		</Build>
