game | added box exchange offer

--- a/src/DealOrNoDeal.cbp
+++ b/src/DealOrNoDeal.cbp
@@ -41,6 +41,7 @@
 		<Unit filename="game.cpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
+		<Unit filename="render.cpp" />
 		<Unit filename="resource.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
