--- a/src/DealOrNoDeal.cbp
+++ b/src/DealOrNoDeal.cbp
@@ -12,10 +12,18 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-m32" />
 					<Add option="-g" />
 					<Add option="-ffast-math" />
 					<Add directory="miniaudio" />
+					<Add directory="include" />
 				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add library="SDL2" />
+					<Add library="SDL2_image" />
+					<Add directory="lib64" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="../Deal or no Deal" prefix_auto="1" extension_auto="1" />
@@ -27,9 +35,13 @@
 					<Add option="-Os" />
 					<Add option="-ffast-math" />
 					<Add directory="miniaudio" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="SDL2" />
+					<Add library="SDL2_image" />
+					<Add directory="lib64" />
 				</Linker>
 			</Target>
 		</Build>
@@ -39,6 +51,8 @@
 		</Compiler>
 		<Unit filename="console.cpp" />
 		<Unit filename="game.cpp" />
+		<Unit filename="gl.cpp" />
+		<Unit filename="gui.cpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
 		<Unit filename="render.cpp" />
