--- a/config/textures.cfg
+++ b/config/textures.cfg
@@ -1,5 +1,5 @@
 //cmd	//path						//id
-texture data/gui/logo.jpg 			GameLogo
+texture data/gui/logo.png 			GameLogo
 texture data/gui/price.png 			RemainingPrices
 texture data/images/box_closed.png 	ClosedBox
 texture data/images/box_opened.png 	OpenedBox
