sounds | added more sounds and songs

--- a/config/sounds.cfg
+++ b/config/sounds.cfg
@@ -1,3 +1,4 @@
 //cmd	//path						//id
 sound 	data/audio/box_open.wav 	BoxOpen
 sound 	data/audio/money_loss.wav 	MoneyLoss
+sound 	data/audio/bank_call.ogg 	BankCall
