sounds | new sounds

--- a/config/sounds.cfg
+++ b/config/sounds.cfg
@@ -1,4 +1,5 @@
-//cmd	//path						//id
-sound 	data/audio/box_open.wav 	BoxOpen
-sound 	data/audio/money_loss.wav 	MoneyLoss
-sound 	data/audio/bank_call.ogg 	BankCall
+//cmd	//path							//id
+sound 	data/audio/box_open.ogg 		BoxOpen
+sound 	data/audio/box_positive.ogg 	BoxPositive
+sound 	data/audio/box_negative.ogg 	BoxNegative
+sound 	data/audio/bank_call.ogg 		BankCall
