game | moved other dialogs to cfg file

--- a/config/dialogs.cfg
+++ b/config/dialogs.cfg
@@ -42,12 +42,12 @@
 	What a bad start! $%d, in one of the first boxes. Let's try to forget that.
 	Are you lucky in your life? Because I have some serious doubts.
 	BOOM! $%d gone, and we are only at the beginning!
-	That's not the start we were hoping for - $%d already gone.
+	That's not the start we were hoping for: $%d already gone.
 	You've got your work cut out for you after losing $%d so early on.
 	It's not looking good with $%d gone so soon. Can you turn things around?
 	That's a tough break: $%d down the drain already.
 	$%d gone already? You'll need to be lucky to recover from that.
-	Ouch, that's a painful start - $%d gone and many boxes left to open.
+	Ouch, that's a painful start: $%d gone and many boxes left to open.
 [midGameWinDialog] //////////////////////////////////////// Mid game ////////////////////////////////////////
 	Nice, only $%d! You're doing well, please choose another box.
 	Yay, let the banker cry now! $%d gone.
@@ -102,3 +102,8 @@
 	The banker is on the line. Time to see what he's offering us.
 	The banker has something to say. Will you take the bucks or keep going?
 	The banker is calling with an offer. Do you have what it takes to hold out for more?
+[dealRefused]
+	It's risky: I like that! Let's continue.
+	Maybe we won't see such a good offer again!
+	Maybe you've made a good choice and ruined the banker! Let's continue.
+	I see that the banker is not generous enough for you!
