game | working on making things better

--- a/src/DealOrNoDeal.cbp
+++ b/src/DealOrNoDeal.cbp
@@ -61,6 +61,7 @@
 		<Unit filename="engine/textures.h" />
 		<Unit filename="engine/tools.cpp" />
 		<Unit filename="engine/tools.h" />
+		<Unit filename="game/bank.cpp" />
 		<Unit filename="game/dialogs.cpp" />
 		<Unit filename="game/game.cpp" />
 		<Unit filename="game/game.h" />
