engine | moving dialogs management to the next level

--- a/config/dialogs.cfg
+++ b/config/dialogs.cfg
@@ -1,4 +1,4 @@
-[introDialog]
+[GAME_INTRO]
 	Ladies and gentlemen, we are here with a winner! Please choose your box, shall we?
 	It's time to choose your box wisely! But remember: It's all about chance.
 	So, what's your box today? Pick the one that smells like bucks!
@@ -11,7 +11,7 @@
 	Let's see if you have the guts to go for the grand prize! Choose your box and let's go!
 	Will you walk away with a fortune, or will you bust? Pick your box and let's find out.
 	Are you feeling lucky today? Choose your box and let's see if fate is on your side.
-[chooseBoxDialog]
+[CHOOSE_BOX]
 	You choosed the box %d, I hope that it's a good number for you today!
 	Box %d? I don't trust this number. But hey: maybe it's a lucky one for you!
 	Let's go with box number %d. I think this is the one too! Or maybe not.
@@ -23,7 +23,7 @@
 	Box %d could be the lucky number you've been looking for.
 	Will box %d bring you fortune or disappointment?
 	Box %d: your destiny is inside.
-[earlyGameWinDialog] //////////////////////////////////////// Early game ////////////////////////////////////////
+[EARLY_GAME_WIN] //////////////////////////////////////// Early game ////////////////////////////////////////
 	$%d: It's a good start! Please proceed.
 	It's a lucky start! $%d gone.
 	Good one! Let's open other boxes.
@@ -33,12 +33,12 @@
 	That's a nice chunk of change to start with $%d!
 	You must be feeling good after deleting $%d right off the bat!
 	Keep up the momentum after that successful start with $%d!
-[earlyGameMidDialog]
+[EARLY_GAME_MID]
 	$%d: We can do better, but it's not that bad.
 	We are starting gently: $%d gone.
 	Hum... $%d is a little pile of money, but it could be worse.
 	You're on the board with $%d: not bad, but there's room for improvement.
-[earlyGameLossDialog]
+[EARLY_GAME_LOSS]
 	What a bad start! $%d, in one of the first boxes. Let's try to forget that.
 	Are you lucky in your life? Because I have some serious doubts.
 	BOOM! $%d gone, and we are only at the beginning!
@@ -48,7 +48,7 @@
 	That's a tough break: $%d down the drain already.
 	$%d gone already? You'll need to be lucky to recover from that.
 	Ouch, that's a painful start: $%d gone and many boxes left to open.
-[midGameWinDialog] //////////////////////////////////////// Mid game ////////////////////////////////////////
+[MID_GAME_WIN] //////////////////////////////////////// Mid game ////////////////////////////////////////
 	Nice, only $%d! You're doing well, please choose another box.
 	Yay, let the banker cry now! $%d gone.
 	Good one! Let's open other boxes.
@@ -60,7 +60,7 @@
 	Great job! $%d is nothing to sneeze at, but it's not what we're here for.
 	You're on a roll! Another low-value box down, and $%d with it.
 	Awesome! The banker must be fuming now that $%d is off the table.
-[midGameMidDialog]
+[MID_GAME_MID]
 	$%d: We can do better, but it's not that bad.
 	$%d: We cannot lose money like that at this state of the game.
 	Hum... $%d is a little pile of money, but it could be worse.
@@ -68,7 +68,7 @@
 	$%d: not great, not terrible.
 	A loss of $%d hurts, but we're still in the game and we'll keep pushing.
 	Not ideal. $%d is a significant loss, but we'll bounce back.
-[midGameLossDialog]
+[MID_GAME_LOSS]
 	Holy shit! $%d. Maybe it was the last big one.
 	Are you lucky in your life? Because I have some serious doubts.
 	BOOM! $%d gone, if the banker call now, we're screwed!
@@ -80,20 +80,25 @@
 	Oof, we just took a serious hit. $%d out the door. Can we recover from this?
 	Well, that stings. $%d gone in a flash. Let's hope we can turn things around soon.
 	Wow, that was a big one. $%d down the tubes. We've got our work cut out for us now.
-[endGameWinDialog] //////////////////////////////////////// End game ////////////////////////////////////////
+[END_GAME_WIN] //////////////////////////////////////// End game ////////////////////////////////////////
 	Nice, only $%d! You're doing well, please choose another box.
 	Yay, let the banker cry now! $%d gone.
 	Good one! Let's open other boxes
-[endGameMidDialog]
+[END_GAME_MID]
 	$%d: We can do better, but it's not that bad.
 	$%d: We cannot lose money like that at this state of the game.
 	Hum... $%d is a little pile of money, but it could be worse.
-[endGameLossDialog]
+    $%d isn't great, but we can improve. It could be worse.
+    At this stage, we can't afford to lose $%d. Not good.
+[END_GAME_LOSS]
 	NO NO NO! Not now, we lost $%d.
 	BOOM! $%d gone, if the banker call now, we're screwed!
 	I bet the banker is now doing a party, and he's right!
 	Nooooo! So close to a win! But that's how it is in Buck or bust!
-[bankerCall] //////////////////////////////////////// Bank ////////////////////////////////////////
+	Banker's party? He's right, we lost big.
+	Almost won, so close! Buck or bust reality. Nooooo!
+	Lost $%d! Not the right time. No, no, no!
+[BANKER_CALL] //////////////////////////////////////// Bank ////////////////////////////////////////
     It seems that the banker has an offer for you!
     Ah, the banker is calling, I bet he's laughing right now!
     Here comes the sly banker. Watch out! He could bluff us!
@@ -102,8 +107,18 @@
 	The banker is on the line. Time to see what he's offering us.
 	The banker has something to say. Will you take the bucks or keep going?
 	The banker is calling with an offer. Do you have what it takes to hold out for more?
-[dealRefused]
+    Are you brave enough to keep going? The stakes are high!
+    To sell or not to sell? The banker's offer is on the table.
+    The banker is offering you a deal... Will you take it or leave it?
+[DEAL_REFUSED]
 	It's risky: I like that! Let's continue.
 	Maybe we won't see such a good offer again!
 	Maybe you've made a good choice and ruined the banker! Let's continue.
 	I see that the banker is not generous enough for you!
+    Your choice could make or break the game. What will you do?
+    You're not afraid to take a risk, are you? Let's see what happens next.
+    Things are getting interesting! Do you have what it takes to win big?
+    You're playing with fire now! Are you ready to take on the banker?
+    The tension is rising! What will happen next in this game of chance?
+    You're one step closer to the grand prize! Don't give up now.
+    You're in the hot seat now! Can you handle the pressure?
