particles | added particle manager

--- a/config/textures.cfg
+++ b/config/textures.cfg
@@ -1,13 +1,15 @@
-//cmd	//path						//id
-texture data/gui/logo.png 			GameLogo
-texture data/images/bg_menu.jpg		MenuBackground
-texture data/gui/button.png 		Button
-texture data/images/price.png 		RemainingPrices
-texture data/images/box_closed.png 	ClosedBox
-texture data/images/box_opened.png 	OpenedBox
-texture data/images/presenter.png 	Presenter
-texture data/images/bubble.png		Bubble
-texture data/images/banker.png		Banker
-texture data/images/bg_neutral.jpg	NeutralBackground
-texture data/images/bg_good.jpg		GoodBackground
-texture data/images/bg_bad.jpg		BadBackground
+//cmd	//path							//id
+texture data/gui/logo.png 				GameLogo
+texture data/images/bg_menu.jpg			MenuBackground
+texture data/gui/button.png 			Button
+texture data/images/price.png 			RemainingPrices
+texture data/images/box_closed.png 		ClosedBox
+texture data/images/box_opened.png 		OpenedBox
+texture data/images/presenter.png 		Presenter
+texture data/images/bubble.png			Bubble
+texture data/images/banker.png			Banker
+texture data/images/bg_neutral.jpg		NeutralBackground
+texture data/images/bg_good.jpg			GoodBackground
+texture data/images/bg_bad.jpg			BadBackground
+texture data/particles/confetti.png		Confetti
+texture data/particles/smoke.png		Smoke
